[package]
name = "BuildLimitChanger"
version = "0.0.1"
edition = "2021"

[dependencies]
bhook = "0.1"
ctor = "0.4"
log = "0.4"
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elf = "0.8"
capstone = "0.13.0"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder"] }



[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false