[package]
name = "BuildLimitChanger"
version = "0.0.1"
edition = "2021"

[dependencies]
bhook = "0.1"
ctor = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
elf = "0.8"

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_ProcessStatus",
    "Win32_System_Com",
    "Win32_Security"
]}
pelite = "0.10"
windows = { version = "0.52", features = ["Storage"]}

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder"] }



[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false