[package]
name = "BuildLimitChanger"
version = "0.0.1"
edition = "2021"

[dependencies]
bhook = { git = "https://github.com/Zeuroux/bhook.git" }
ctor = "0.6"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_ProcessStatus",
]}
pelite = "0.10"
windows = { version = "0.52", features = ["Storage", "ApplicationModel"]}

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder", "no_vex", "no_evex", "no_xop", "no_d3now"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false